package com.jvm.game;

import com.badlogic.ashley.core.Component;

//Stores directional speed for moving elements
public class VelocityComponent implements Component {
    public float x = 0.0f;
    public float y = 0.0f;
}
